сделал второй блок, преимущетсва

--- a/Lending/global_opt/src/index.html
+++ b/Lending/global_opt/src/index.html
@@ -61,5 +61,85 @@
             </div>
         </div>
     </section>
+
+    <section class="advantages">
+        <div class="container">
+            <h2 class="title">Преимущества работы с GlobalOpt</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/local.png" alt="local">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Офисы в Китае и России</div>
+                        <div class="advantages__descr">Офисы расположены в Москве, столице России.  И в Гуанчжоу, мировом торговом мегаполисе Китая.</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/declaration.png" alt="declaration">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Декларируем груз с оптимизацией</div>
+                        <div class="advantages__descr">Идем на встречу своим клиентам и помогаем растаможить груз с оптимизацией кодов и ставок.</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/personnel.png" alt="personnel">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Квалифицированные кадры</div>
+                        <div class="advantages__descr">Наши сотрудники имеют большой опыт в логистике с Китаем и в совершенстве владеют китайским и английским языками.</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/search.png" alt="search">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Осуществляем поиск производителей</div>
+                        <div class="advantages__descr">Помогаем нашим клиентам найти интересующий вас товар или производителя в Китае.</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/stock.png" alt="stock">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Собственный склад в Китае</div>
+                        <div class="advantages__descr">Свой склад в Китае, позволяет собирать и проверять и упаковывать  ваши товары, перед отправкой.</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/transfer.png" alt="transfer">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Перевод денег в Китай</div>
+                        <div class="advantages__descr">Помогаем переводить и оплачивать товар в Китае на льготных условиях</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/supply.png" alt="supply">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Делаем оптовые поставки под ключ</div>
+                        <div class="advantages__descr">Берём на себя все заботы связанные с  закупкой, проверкой на качество, логистикой и растаможкой. От вас требуется лишь заполнить техническое задание, одобрить  образцы товаров и после принять товар на своём складе!</div>
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__img">
+                        <img src="icons/advantages/trip.png" alt="trip">
+                    </div>
+                    <div class="advantages__text">
+                        <div class="advantages__subtitle">Поездка на производство в Китай</div>
+                        <div class="advantages__descr">У нас большой опыт в бизнес поездках по Китаю. Мы с большой радостью и желанием организуем вам такую поездку в Китай под ключ. Сделаем визу, трансфер из аэропорта, забронируем отель, предоставим переводчика. Организуем поездку на производство. Шоп тур. Мебельный тур. </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
