сделал 2 блока, jobs, agent

--- a/Lending/global_opt/src/index.html
+++ b/Lending/global_opt/src/index.html
@@ -141,5 +141,41 @@
             </div>
         </div>
     </section>
+
+    <section class="jobs">
+        <div class="container">
+            <h2 class="title">Наша работа - больше чем просто доставка</h2>
+            <hr>
+            <div class="subtitle">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза<br>и ваших требований по срокам и бюджету.</div>
+            <div class="jobs__wrapper">
+                <div class="jobs__item">
+                    <img src="img/insurance.jpg" alt="insurance">
+                    <div class="jobs__subtitle">Страховка груза</div>
+                    <div class="jobs__descr">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым соглашением. Все ваши тревоги наша компания берет на себя.</div>
+                </div>
+                <div class="jobs__item">
+                    <img src="img/logistics.png" alt="logistics">
+                    <div class="jobs__subtitle">Логистика последней мили</div>
+                    <div class="jobs__descr">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также мы предоставляем услуги грузчи- ков по месту доставки груза.</div>
+                </div>
+                <div class="jobs__item">
+                    <img src="img/forward.jpg" alt="forward">
+                    <div class="jobs__subtitle">Мы всегда смотрим вперед</div>
+                    <div class="jobs__descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях. </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="agent">
+        <div class="container">
+            <div class="agent__item">
+                <div class="agent__managers">
+                    <img src="icons/agent.png" alt="agent">
+                </div>
+            </div>
+            <h3 class="agent__subtitle">Агент в Китае</h3>
+            <div class="agent__descr">Русскоговорящие представители компании без труда найдут именно тот товар, который будет отвечать Вашим<br>запросам как по качеству, так и по цене.</div>
+        </div>
+    </section>
 </body>
 </html>
