--- a/Lending/global_opt/src/index.html
+++ b/Lending/global_opt/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="main">
+    <div class="main">
         <div class="container">
             <div class="header">
                 <a href="" class="header__logo">
@@ -60,7 +60,7 @@
                 <button class="button button_main">Получить расчет</button>
             </div>
         </div>
-    </section>
+    </div>
 
     <section class="advantages">
         <div class="container">
@@ -166,15 +166,87 @@
             </div>
         </div>
     </section>
-    <section class="agent">
+    <section class="insert">
         <div class="container">
-            <div class="agent__item">
-                <div class="agent__managers">
+            <div class="insert__item">
+                <div class="insert__managers">
                     <img src="icons/agent.png" alt="agent">
                 </div>
             </div>
-            <h3 class="agent__subtitle">Агент в Китае</h3>
-            <div class="agent__descr">Русскоговорящие представители компании без труда найдут именно тот товар, который будет отвечать Вашим<br>запросам как по качеству, так и по цене.</div>
+            <h3 class="insert__subtitle">Агент в Китае</h3>
+            <div class="insert__descr">Русскоговорящие представители компании без труда найдут именно тот товар, который будет отвечать Вашим<br>запросам как по качеству, так и по цене.</div>
+        </div>
+    </section>
+    <section class="prices">
+        <div class="container">
+            <h2 class="title">Цены на любой вариант доставки</h2>
+            <hr>
+            <div class="subtitle">Перевозки грузов на дальние расстояния без каких-либо ограничений.<br>Любой груз доставим вовремя. </div>
+            <div class="prices__wrapper">
+                <div class="prices__item">
+                    <div class="prices__header">Доставка морем</div>
+                    <img src="icons/price/ship.png" alt="ship">
+                    <div class="prices__subtitle">Доставка 35-50 дней</div>
+                    <div class="prices__title">от 0,3$ за 1 кг</div>
+                    <div class="prices__descr">Морские перевозки грузов из Китая в Россию за 35 дней с прохождением таможни </div>
+                    <button class="button">Подробнее</button>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Ж/Д доставка</div>
+                    <img src="icons/price/train.png" alt="train">
+                    <div class="prices__subtitle">Доставка 15-28 дней</div>
+                    <div class="prices__title">от 1$ за 1 кг</div>
+                    <div class="prices__descr">ЖД перевозки грузов из Китая в Россию от 2 недель с прохождением таможни</div>
+                    <button class="button">Подробнее</button>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Автодоставка</div>
+                    <img src="icons/price/auto.png" alt="auto">
+                    <div class="prices__subtitle">Доставка 12-дня</div>
+                    <div class="prices__title">от 1$ за 1 кг</div>
+                    <div class="prices__descr">Автоперевозки грузов из Китая в Россию от 2 недель с прохождением таможни</div>
+                    <button class="button">Подробнее</button>
+                </div>
+                <div class="prices__item">
+                    <div class="prices__header">Авиа доставка</div>
+                    <img src="icons/price/airplane.png" alt="airplane">
+                    <div class="prices__subtitle">Доставка 1-12 дней</div>
+                    <div class="prices__title">от 6$ за 1 кг</div>
+                    <div class="prices__descr">Авиаперевозки грузов из Китая в Россию до 2 недель с прохождением таможни</div>
+                    <button class="button">Подробнее</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="consultation">
+        <div class="container">
+            <h3 class="consultation__title">Заказать бесплатную консультацию</h3>
+            <div class="consultation__wrapper">
+                <div class="consultation__background">
+                        <div class="consultation__img">
+                            <img src="icons/consultation.png" alt="consultation">
+                        </div>
+                </div>
+                <form action="POST" class="feed-form">
+                <input name="name" required placeholder="Ваше имя..." type="text">
+                <input name="phone" required placeholder="Ваш номер телефона..." type="tel">
+                <input name="email" required placeholder="Ваш e-mail..." type="email">
+                </form>
+                <div class="consultation__background consultation__background-button">
+                    <button class="button button_consultation">Отправить заявку</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="insert insert-managers">
+        <div class="container">
+            <div class="insert__item">
+                <div class="insert__managers">
+                    <img src="icons/managers.png" alt="managers">
+                </div>
+            </div>
+            <h3 class="insert__subtitle">Менеджеры компании</h3>
+            <div class="insert__descr">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок, организуют прямые<br>поставки от завода-изготовителя.</div>
         </div>
     </section>
 </body>
